---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    - 
  Changes:
    - 
  Bugfixes:
    - Fixed a crash when submitting the product picker without a product selected

---------------------------------------------------------------------------------------------------
Version: 0.18.3
Date: 21. 02. 2020
  Features:
    - Added pollution information to machine tooltips
    - Added a tooltip explaining what the percentage-textfield on the recipe-lines does
  Bugfixes:
    - Fixed that the recipe dialog didn't have the correct size sometimes
    - Added exception for the mod 'Deep Mine' so the preferences dialog doesn't crash when it is installed
    - Fixed a crash when using the beacon selection tool
    - Fixed a crash when adding a new subfactory while viewing an invalid one
    - Fixed the main interface not refreshing after changing some preferences

---------------------------------------------------------------------------------------------------
Version: 0.18.2
Date: 20. 02. 2020
  Changes:
    - Improved responsiveness of the subfactory name-entry in multiplayer
  Bugfixes:
    - Fixed the ingredients and byproducts not showing up at the subfactory level
    - Fixed some wonkiness related to the 'Floor Total' view

---------------------------------------------------------------------------------------------------
Version: 0.18.1
Date: 21. 01. 2020
  Features: