@@ -7,6 +7,7 @@ Date: 00. 00. 0000
     - 
   Bugfixes:
     - Fixed a crash when submitting the product picker without a product selected
+    - Fixed several crashes related to invalid inputs in dialog windows
 
 ---------------------------------------------------------------------------------------------------
 Version: 0.18.3
